--- a/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
@@ -35,8 +35,15 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout>
-                                <Label Text="{Binding name}"/>
+                            <StackLayout Orientation="Horizontal">
+                                <Grid HorizontalOptions="FillAndExpand" >
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="90*" />
+                                        <ColumnDefinition Width="10*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label Text="{Binding name}" Grid.Column="0" Grid.Row="0"/>
+                                    <Button Text="-" Grid.Column="1" Grid.Row="0"/>
+                                </Grid>
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
