UI is udjusting, UWP works, navibar removed

--- a/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
@@ -2,55 +2,63 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GymProgress.View.ExerciseView"
-             xmlns:vm="clr-namespace:GymProgress.ViewModel">
+             xmlns:vm="clr-namespace:GymProgress.ViewModel" NavigationPage.HasNavigationBar="false">
     <ContentPage.BindingContext>
         <vm:ExerciseViewModel/>
     </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Exercises"
+            <Grid x:Name="mainRowGrid">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10*" />
+                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="80*"/>
+                </Grid.RowDefinitions>
+                <Label Text="Exercises"
                 VerticalOptions="Start" 
-                HorizontalOptions="CenterAndExpand" />
-            <StackLayout >
-                <Grid >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="65*" />
-                    <ColumnDefinition Width="35*"/>
-                </Grid.ColumnDefinitions>
-                <SearchBar x:Name="ExercisesSearchBar" Grid.Column="0" Grid.Row="0"
+                HorizontalOptions="CenterAndExpand" Grid.Column="0" Grid.Row="0" FontSize="35" FontAttributes="Bold"
+                       >
+                </Label>
+                <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Grid.Column="0" Grid.Row="1">
+                    <Grid >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="65*" />
+                            <ColumnDefinition Width="35*"/>
+                        </Grid.ColumnDefinitions>
+                        <SearchBar x:Name="ExercisesSearchBar" Grid.Column="0" Grid.Row="0"
                        Text="{Binding Keyword}"
                        TextChanged="SearchBar_OnTextChanged"
                            />
-                
-                <Button Text="Add" Grid.Column="1" Grid.Row="0"
+
+                        <Button Text="Add" Grid.Column="1" Grid.Row="0"
                         BackgroundColor="SandyBrown"
                         TextColor="White"
                         Command="{Binding AddCommand}"
                         CommandParameter="{Binding Text, Source={x:Reference ExercisesSearchBar}}"
                         />
-                </Grid>
-            </StackLayout>
-            <ListView x:Name="ExercisesListView"
-                      ItemsSource="{Binding Suggestions}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Grid HorizontalOptions="FillAndExpand" >
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="90*" />
-                                        <ColumnDefinition Width="10*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Label Text="{Binding name}" Grid.Column="0" Grid.Row="0"/>
-                                    <Button Text="-" Grid.Column="1" Grid.Row="0"
+                    </Grid>
+                </StackLayout>
+                <ListView x:Name="ExercisesListView"
+                      ItemsSource="{Binding Suggestions}" Grid.Column="0" Grid.Row="2">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout Orientation="Horizontal">
+                                    <Grid HorizontalOptions="FillAndExpand" >
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="90*" />
+                                            <ColumnDefinition Width="10*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Label Text="{Binding name}" Grid.Column="0" Grid.Row="0"/>
+                                        <Button Text="-" Grid.Column="1" Grid.Row="0"
                                             Clicked="DeleteButton_Clicked"/>
-                                </Grid>
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-
+                                    </Grid>
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
