--- a/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
@@ -14,11 +14,10 @@
                     <RowDefinition Height="10*"/>
                     <RowDefinition Height="80*"/>
                 </Grid.RowDefinitions>
-                <Label Text="Exercises"
+                <Label Text="EXERCISES"
                 VerticalOptions="Start" 
-                HorizontalOptions="CenterAndExpand" Grid.Column="0" Grid.Row="0" FontSize="35" FontAttributes="Bold"
-                       >
-                </Label>
+                HorizontalOptions="CenterAndExpand" Grid.Column="0" Grid.Row="0" FontSize="35" FontAttributes="Bold"/>
+
                 <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Grid.Column="0" Grid.Row="1">
                     <Grid >
                         <Grid.ColumnDefinitions>
