database is connected to very modelview now, sql works smoothly

--- a/GymProgress/GymProgress/GymProgress/View/AddExericeView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/AddExericeView.xaml
@@ -25,7 +25,7 @@
                     <ColumnDefinition Width="70*"/>
                 </Grid.ColumnDefinitions>
                 <Button Text="Select exercise" Grid.Row="0" Grid.Column="0" Clicked="SelectExercise_Clicked"/>
-                <Entry Text="{Binding Exercise.name}" Grid.Row="0" Grid.Column="1"/>
+                <Entry Text="{Binding Exercise.Name}" Grid.Row="0" Grid.Column="1"/>
                 <Label Text="Series" Grid.Row="1" Grid.Column="0"/>
                 <Entry Text="{Binding Series}" Grid.Row="1" Grid.Column="1"/>
                 <Label Text="Repetition" Grid.Row="2" Grid.Column="0"/>
@@ -34,7 +34,7 @@
                 <Entry Text="{Binding Weight}"  Grid.Row="3" Grid.Column="1"/>
             </Grid>
             <StackLayout>
-                <Button Text="add exercise" Command="{Binding AddCommand}" />
+                <Button Text="add exercise" Clicked="AddExerciseInTraining_Clicked" />
             </StackLayout>
 
         </StackLayout>
