--- a/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
@@ -48,7 +48,7 @@
                                             <ColumnDefinition Width="90*" />
                                             <ColumnDefinition Width="10*"/>
                                         </Grid.ColumnDefinitions>
-                                        <Label Text="{Binding name}" Grid.Column="0" Grid.Row="0"/>
+                                        <Label Text="{Binding Name}" Grid.Column="0" Grid.Row="0"/>
                                         <Button Text="-" Grid.Column="1" Grid.Row="0"
                                             Clicked="DeleteButton_Clicked"/>
                                     </Grid>
