--- a/GymProgress/GymProgress/GymProgress/View/TrainingView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/TrainingView.xaml
@@ -20,10 +20,10 @@
                     <ColumnDefinition Width="30*" />
                     <ColumnDefinition Width="70*"/>
                 </Grid.ColumnDefinitions>
-                <Label Text="Description" Grid.Row="0" Grid.Column="0"/>
-                <Entry Grid.Row="0" Grid.Column="1"/>
+                <Label Text="Description: " Grid.Row="0" Grid.Column="0"/>
+                <Entry Text="{Binding Descritpion}" Grid.Row="0" Grid.Column="1"/>
                 <Label Text="Date" Grid.Row="1" Grid.Column="0"/>
-                <DatePicker  Grid.Row="1" Grid.Column="1"/>
+                <DatePicker Date="{Binding Date}" Grid.Row="1" Grid.Column="1"/>
                 
             </Grid>
             <StackLayout>
