--- a/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GymProgress.View.ExerciseView"
-             xmlns:vm="clr-namespace:GymProgress.ViewModel" NavigationPage.HasNavigationBar="false">
+             xmlns:vm="clr-namespace:GymProgress.ViewModel" 
+             xmlns:behaviors ="clr-namespace:GymProgress.Behavior"  NavigationPage.HasNavigationBar="false">
     <ContentPage.BindingContext>
         <vm:ExerciseViewModel/>
     </ContentPage.BindingContext>
@@ -26,14 +27,13 @@
                         </Grid.ColumnDefinitions>
                         <SearchBar x:Name="ExercisesSearchBar" Grid.Column="0" Grid.Row="0"
                        Text="{Binding Keyword}"
-                       TextChanged="SearchBar_OnTextChanged"
-                           />
+                       TextChanged="SearchBar_OnTextChanged">
+                        </SearchBar>
 
-                        <Button Text="Add" Grid.Column="1" Grid.Row="0"
+                        <Button x:Name="AddButton" Text="Add" Grid.Column="1" Grid.Row="0" IsEnabled="false"
                         BackgroundColor="SandyBrown"
-                        TextColor="White"
-                        Command="{Binding AddCommand}"
-                        CommandParameter="{Binding Text, Source={x:Reference ExercisesSearchBar}}"
+                        TextColor="White"  Clicked="AddButton_Clicked"
+                       
                         />
                     </Grid>
                 </StackLayout>
