--- a/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
@@ -32,9 +32,7 @@
 
                         <Button x:Name="AddButton" Text="Add" Grid.Column="1" Grid.Row="0" IsEnabled="false"
                         BackgroundColor="SandyBrown"
-                        TextColor="White"  Clicked="AddButton_Clicked"
-                       
-                        />
+                        TextColor="White"  Clicked="AddButton_Clicked"/>
                     </Grid>
                 </StackLayout>
                 <ListView x:Name="ExercisesListView"
