--- a/GymProgress/GymProgress/GymProgress/View/AddExericeView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/AddExericeView.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GymProgress.View.AddExericeView"
-             xmlns:vm="clr-namespace:GymProgress.ViewModel" NavigationPage.HasNavigationBar="false">
+             xmlns:vm="clr-namespace:GymProgress.ViewModel"
+             BackgroundColor="#dadada" NavigationPage.HasNavigationBar="false">
     <ContentPage.BindingContext>
         <vm:ExerciseInTrainingViewModel/>
     </ContentPage.BindingContext>
