--- a/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/ExerciseView.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GymProgress.View.ExerciseView"
              xmlns:vm="clr-namespace:GymProgress.ViewModel" 
-             xmlns:behaviors ="clr-namespace:GymProgress.Behavior"  NavigationPage.HasNavigationBar="false">
+             xmlns:behaviors ="clr-namespace:GymProgress.Behavior" BackgroundColor="#dadada"
+             NavigationPage.HasNavigationBar="false">
     <ContentPage.BindingContext>
         <vm:ExerciseViewModel/>
     </ContentPage.BindingContext>
@@ -35,20 +36,21 @@
                         TextColor="White"  Clicked="AddButton_Clicked"/>
                     </Grid>
                 </StackLayout>
-                <ListView x:Name="ExercisesListView"
-                      ItemsSource="{Binding Suggestions}" Grid.Column="0" Grid.Row="2" ItemTapped="ExerciseChoossed_Clicked">
+                <ListView x:Name="ExercisesListView" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"  BackgroundColor="#ffffff"
+                      ItemsSource="{Binding Suggestions}" Grid.Column="0" Grid.Row="2" ItemTapped="ExerciseChoossed_Clicked" Margin="10">
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal">
+                            <ViewCell >
+                                <StackLayout Orientation="Horizontal"  BackgroundColor="#ebebeb"  Spacing="10" VerticalOptions="FillAndExpand"
+                                            HorizontalOptions="FillAndExpand" >
                                     <Grid HorizontalOptions="FillAndExpand" >
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="90*" />
                                             <ColumnDefinition Width="10*"/>
                                         </Grid.ColumnDefinitions>
-                                        <Label Text="{Binding Name}" Grid.Column="0" Grid.Row="0"/>
+                                        <Label Text="{Binding Name}" Grid.Column="0" Grid.Row="0" />
                                         <Button Text="-" Grid.Column="1" Grid.Row="0"
-                                            Clicked="DeleteButton_Clicked"/>
+                                            Clicked="DeleteButton_Clicked" BackgroundColor="#FFaa88"/>
                                     </Grid>
                                 </StackLayout>
                             </ViewCell>
