--- a/GymProgress/GymProgress/GymProgress/View/StatisticView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/StatisticView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
               xmlns:forms="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms" 
              x:Class="GymProgress.View.StatisticView" xmlns:vm="clr-namespace:GymProgress.ViewModel" 
-              NavigationPage.HasNavigationBar="false">
+              NavigationPage.HasNavigationBar="false" BackgroundColor="#dadada">
     <ContentPage.BindingContext>
         <vm:TrainingListViewModel/>
     </ContentPage.BindingContext>
