--- a/GymProgress/GymProgress/GymProgress/View/TrainingListView.xaml
+++ b/GymProgress/GymProgress/GymProgress/View/TrainingListView.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GymProgress.View.TrainingListView"
-              xmlns:vm="clr-namespace:GymProgress.ViewModel" NavigationPage.HasNavigationBar="false">
+              xmlns:vm="clr-namespace:GymProgress.ViewModel" NavigationPage.HasNavigationBar="false"
+             BackgroundColor="#dadada">
     <ContentPage.BindingContext>
         <vm:TrainingListViewModel/>
     </ContentPage.BindingContext>
